--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,3 +213,6 @@ _:-ms-input-placeholder, :root .demo-graph {
       -ms-flex-align: center;
           align-items: center;
 }
+.show-placeholder>div>a {
+display: none !important;
+}
