--- a/public/css/c7c6c91c74f3ba91f96a8871632cf877.css
+++ b/public/css/c7c6c91c74f3ba91f96a8871632cf877.css
@@ -4336,6 +4336,10 @@ a.skip-link img {
   background: #f3f3f3;
   padding: 30px 0;
 }
+.nav-link_first-lvl.active-menu {
+    border-bottom: 3px solid #138c94 !important;
+    color: #008b9a;
+}
 .nav-container .nav .nav-link_first-lvl:hover {
   border-bottom: 3px solid #138c94;
 }
