--- a/public/css/css.css
+++ b/public/css/css.css
@@ -215,3 +215,36 @@ ul#flexiselDemo1 p{
 .carousel-inner>.item>img {
 width:100% !important;
 }
+li.product__item {
+    max-width: 23%;
+    display: inline-block;
+    border: 1px dotted #e1e1e1;
+    box-shadow: 8px 8px 10px #e8e8e8;
+    margin-top: 25px;
+    margin-left: 15px;
+}
+.infosproducts {
+    text-align: center;
+}
+.product__item .infosproducts p.product_reco-price {
+    font-size: 18px;
+    color: #656060;
+    font-weight: 500;
+}
+header#header {
+    max-width: 100%;
+    margin: 0;
+}
+img.act {
+    display: block !important;
+}
+img.inact {
+    display: none !important;
+}
+a.thumb-link.active-img {
+    border: 3px solid;
+}
+li.product__item.hover,
+li.nbs-flexisel-item.hover {
+    transform: scale(1.05);
+}
